# python-project-49

./: Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: brain_games.py  cli.py  draft.py  game_engine.py
brain_games/games/: brain_calc.py  brain_calc_logic.py  brain_even.py  brain_even_logic.py  brain_gcd.py  brain_prime.py  brain_prime_logic.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games_cat/: cli.py  game_engine.py
brain_games_cat/games/: brain_calc.py  brain_calc_logic.py  brain_even.py  brain_even_logic.py  brain_gcd.py  brain_gcd_logic.py  brain_prime.py  brain_prime_logic.py  brain_progression.py  brain_progression_logic.py
brain_games_cat/scripts/: basic_phrases.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  game_engine.py
