[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "console game"
authors = ["Ivan Havinson <havinsonivan@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games_cat"}]
repository = "https://github.com/Dw4rfSt4r/python-project-49"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games_cat.scripts.brain_games:main"
brain-even = "brain_games_cat.scripts.brain_even:main"
brain-calc = "brain_games_cat.scripts.brain_calc:main"
brain-gcd = "brain_games_cat.scripts.brain_gcd:main"
brain-progression = "brain_games_cat.scripts.brain_progression:main"
brain-prime = "brain_games_cat.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
